# lai-franka-controllers

./: CMakeLists.txt  README.md  package.xml  plugin.xml
config/: hqp_node_params.yaml  teleop_parame.yaml
include/lai_franka_controllers/: cartesian_reference_generator_node.hpp  cartesian_velocity_controller.hpp  hqp_cartesian_velocity_controller.hpp  hqp_reference_generator_node.hpp  joint_pd_velocity_controller.hpp  joint_sine_publisher_node.hpp  joy_teleop_node.hpp  trajectory_generator_node.hpp
include/my_franka_controllers/: cartesian_reference_generator_node.hpp  hqp_cartesian_velocity_controller.hpp  hqp_reference_generator_node.hpp  joint_pd_velocity_controller.hpp  joint_sine_publisher_node.hpp  joy_teleop_node.hpp  raw_usb_joy_node.hpp  trajectory_generator_node.hpp
lai_franka_controllers/: CMakeLists.txt  FindGUROBI.cmake  README.md  package.xml  plugin.xml
lai_franka_controllers/config/: hqp_node_params.yaml  joy_teleop_params.yaml
lai_franka_controllers/include/lai_franka_controllers/: hqp_cartesian_velocity_controller.hpp  hqp_joint_trajectory_test_node.hpp  hqp_position_test_node.hpp  hqp_reference_generator_node.hpp  joint_pd_test_node.hpp  joint_sine_publisher_node.hpp  joint_trajectory_test_node.hpp  raw_usb_joy_node.hpp  trajectory_generator_node.hpp
lai_franka_controllers/src/: hqp_cartesian_velocity_controller.cpp  hqp_joint_trajectory_test_node.cpp  hqp_position_test_node.cpp  hqp_reference_generator_node.cpp  joint_pd_test_node.cpp  joint_trajectory_test_node.cpp  joy_teleop_node.cpp  raw_usb_joy_node.cpp  trajectory_generator_node.cpp
launch/: hqp_generator.launch.py  hqp_node.launch.py  joy_teleop.launch.py  teleop_with_gamepad.launch.py
msg/: HqpDistances.msg
robot_kinematics/: CMakeLists.txt  README.md  package.xml
robot_kinematics/include/robot_kinematics/: DirectKinematics_mDH.h  FrankaKinematics.hpp  Homogeneous_mDH.h  Jacobian_mDH.h
robot_kinematics/src/: DirectKinematics_mDH.cpp  FrankaKinematics.cpp  Homogeneous_mDH.cpp  Jacobian_mDH.cpp
src/: cartesian_reference_generator_node.cpp  cartesian_velocity_controller.cpp  hqp_cartesian_velocity_controller.cpp  hqp_reference_generator_node.cpp  joint_pd_velocity_controller.cpp  joint_sine_publisher_node.cpp  joy_teleop_node.cpp  kinematic_integrator_node.cpp  raw_usb_joy_node.cpp  trajectory_generator_node.cpp
task/: CMakeLists.txt  README.md  package.xml
task/include/task/: allTasks.hpp  jointSine.hpp  jointSineTask.hpp  jointTracking.hpp  jointsConfigurationLimits.hpp  jointsVelocityLimits.hpp  pose.hpp  selfHits.hpp  task.hpp  virtualWall.hpp
task/src/: jointSine.cpp  jointSineTask.cpp  jointTracking.cpp  jointsConfigurationLimits.cpp  jointsVelocityLimits.cpp  pose.cpp  selfHits.cpp  task.cpp  test_node_main.cpp  virtualWall.cpp
