<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lai_franka_controllers</name>
  <version>1.0.0</version>
  <description>Custom parameter-driven optimization and tracking controllers workspace for Franka FR3.</description>
  <maintainer email="clementlamouller@gmail.com">Clement Lamouller</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>realtime_tools</depend>
  <depend>pluginlib</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>franka_msgs</depend>
  <depend>my_franka_msgs</depend>

  <depend>eigen3</depend>
  <depend>pinocchio</depend>
  <depend>task</depend>
  <depend>qp</depend>
  <depend>hierarchical_qp</depend>
  <depend>robot_kinematics</depend>
  <depend>auxiliaries_function_and_structures</depend>
  
  <depend>libusb-1.0</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <controller_interface plugin="${prefix}/plugin.xml" />
  </export>
</package>