<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_kinematics</name>
  <version>1.0.0</version>
  <description>High-performance codegen and analytical kinematic utilities for the Franka FR3 arm.</description>
  <maintainer email="clementlamouller@gmail.com">Clement Lamouller</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>eigen3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>