<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>task</name>
  <version>1.0.0</version>
  <description>Task priority control modeling formulations for the Franka FR3 HQP control loop architecture.</description>
  <maintainer email="clementlamouller@gmail.com">Clement Lamouller</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <depend>robot_kinematics</depend>
  <depend>qp</depend>
  <depend>auxiliaries_function_and_structures</depend>
  
  <depend>eigen3</depend>
  <depend>gurobi</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>